--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,7 +22,31 @@
       height: 100%;
       overflow-y: auto;
     }
-    
+
+    p {
+      font-family: var(--sansSerifStack);
+    }
+
+    h1 {
+      font-size: 3rem;
+      font-family: var(--sansSerifStack);
+    }
+
+    h2 {
+      font-size: 2rem;
+      font-family: var(--sansSerifStack);
+    }
+
+    h3 {
+      font-size: 1.8rem;
+      font-family: var(--sansSerifStack);
+    }
+
+    h4 {
+      font-size: 1.6rem;
+      font-family: var(--sansSerifStack);
+    }    
+      
     :root {
       --white: #FFF ;
       --whiteSmoke: #F5F5F5 ;
@@ -64,6 +88,7 @@
       --backDropZIndex: 100;
       --navbarZIndex: 150;
       --floatingElementZIndex: 200;
+      --modalZIndex: 225;
       --aboveFloatingElementZIndex: 250;
     }
 
