Refactored CenteringCradle to stretch remaining vertical height or not.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -55,9 +55,9 @@
       --silver: #C0C0C0 ;
       --grey: #A9A9A9 ;
       --darkGrey: #808080 ;
-      --veryDarkGrey: #515151;
+      --veryDarkGrey: ##3b3b3b;
       /*--veryveryDarkGrey: #404040 ;*/ /* Old one */
-      --veryveryDarkGrey: #333333;
+      --veryveryDarkGrey: #262525;
       --black: #000000  ;
       --leafyGreen: #319606;
       --strongRed: #b73434;
@@ -75,7 +75,7 @@
       --c_lowContrastDarkMode: #515151;
       --c_highContrastLightMode: #515151;
       --c_highContrastDarkMode: #D3D3D3;
-      --c_dark: #333333;
+      --c_dark: #262525;
 
       --sansSerifStack: Helvetica, Roboto;
 
