--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,6 +23,10 @@
       overflow-y: auto;
     }
 
+    a {
+      text-decoration: none;
+    }
+
     p {
       font-family: var(--sansSerifStack);
     }
