Changed light theme background color to light grey instead of white. Working on styling SignIn form

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -75,7 +75,7 @@
       --c_success: #319606;
       --c_error: #b73434;
       --c_light: #FFF;
-      --c_lowContrastLightTheme: #D3D3D3;
+      --c_lowContrastLightTheme: #e9ebee; /*#D3D3D3;*/
       --c_lowContrastDarkTheme: #515151;
       --c_highContrastLightTheme: #515151;
       --c_highContrastDarkTheme: #D3D3D3;
