--- a/client/public/index.html
+++ b/client/public/index.html
@@ -86,7 +86,7 @@
       --cardHeight: 250px;
       --cardWidth: 250px;
 
-      --boxShadowLightTheme: 0 5px 10px rgba(0,0,0,0.25), 0 6px 5px rgba(0,0,0,0.22);
+      --boxShadowLightTheme: 0 3px 3px rgba(0,0,0,0.25); /*, 0 6px 5px rgba(0,0,0,0.22);*/
       --boxShadowDarkTheme: 0 5px 28px rgba(255,255,255,0.15);
 
       --navbarZIndex: 150;
