Login form looks pretty good now. Moving onto Register form

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -49,6 +49,11 @@
     h4 {
       font-size: 1.6rem;
       font-family: var(--sansSerifStack);
+    }
+
+    h5 {
+      font-size: 1rem;
+      font-family: var(--sansSerifStack);
     }    
       
     :root {
