TransparentPane and StatusOutlineInner written. Still working through positioning issues for the status outline.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -83,7 +83,7 @@
       --c_lowContrastLightTheme: #e9ebee; /*#D3D3D3;*/
       --c_lowContrastDarkTheme: #515151;
       --c_highContrastLightTheme: #515151;
-      --c_highContrastDarkTheme: #D3D3D3;
+      --c_highContrastDarkTheme: #e9ebee;
       --c_dark: #262525;
 
       --sansSerifStack: Helvetica, Roboto;
@@ -92,7 +92,7 @@
       --cardWidth: 250px;
 
       --boxShadowLightTheme: 0 3px 3px rgba(0,0,0,0.25); /*, 0 6px 5px rgba(0,0,0,0.22);*/
-      --boxShadowDarkTheme: 0 5px 28px rgba(255,255,255,0.15);
+      --boxShadowDarkTheme: 0 5px 10px rgba(255,255,255,0.1);
 
       --navbarZIndex: 150;
       --floatingElementZIndex: 200;
