--- a/client/public/index.html
+++ b/client/public/index.html
@@ -52,9 +52,14 @@
     }
 
     h5 {
+      font-size: 1.3rem;
+      font-family: var(--sansSerifStack);
+    }
+
+    h6 {
       font-size: 1rem;
       font-family: var(--sansSerifStack);
-    }    
+    }
       
     :root {
       --white: #FFF ;
